objects/Job_Hazard_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Job Hazard Analysis</relationshipLabel>
        <relationshipName>Job_Hazard_Analysis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mitigation_of_Potential_Risks__c</fullName>
        <label>Mitigation of Potential Risks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Safety_Risks_Issues__c</fullName>
        <label>Potential Safety Risks/Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Scope_of_Work__c</fullName>
        <label>Scope of Work</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Job Hazard Analysis</label>
    <nameField>
        <displayFormat>JHA-{0000}</displayFormat>
        <label>Job Hazard Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Hazard Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>